# tcfs

./: .gitignore  README.md  bencode.py  client.py  main.py  messages.py  pyproject.toml  torrent.py  tracker.py
